@@ -10,8 +10,8 @@ configurations {
 }
 
 dependencies {
-    markdownDoclet "org.jdrupes.mdoclet:doclet:3.1.0"
-    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:2.0.1"
+    markdownDoclet "org.jdrupes.mdoclet:doclet:4.0.0"
+    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:3.0.0"
 }
 
 task javadocResources(type: Copy) {
@@ -23,7 +23,7 @@ task javadocResources(type: Copy) {
 
 task apidocs(type: JavaExec) {
     // Does not work on JitPack, no /usr/bin/dot
-    enabled = JavaVersion.current() == JavaVersion.VERSION_17 && !isJitPackBuild
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21 && !isJitPackBuild
 
     dependsOn javadocResources
 
@@ -34,7 +34,7 @@ task apidocs(type: JavaExec) {
         .each{project -> dependsOn project.tasks.assemble}
     
     inputs.file rootProject.file('overview.md')
-    inputs.file "${rootProject.rootDir}/misc/stylesheet.css"
+    inputs.file "${rootProject.rootDir}/misc/javadoc-overwrites.css"
     
     classpath = files(rootProject.subprojects
         .findAll({project -> project.name.startsWith("org.jgrapes")})
@@ -47,9 +47,16 @@ task apidocs(type: JavaExec) {
     
     outputs.dir(docDestinationDir)
     
-    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
-               '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
-    main = 'jdk.javadoc.internal.tool.Main'
+    jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED',
+        '-Duser.language=en', '-Duser.region=US']
+    mainClass = 'jdk.javadoc.internal.tool.Main'
+
     args = ['-doctitle', """JGrapes 
             (core-${-> findProject(':org.jgrapes.core').version}, 
             io-${-> findProject(':org.jgrapes.io').version},
@@ -59,7 +66,7 @@ task apidocs(type: JavaExec) {
             mail-${-> findProject(':org.jgrapes.mail').version})""",
         '-use',
         '-linksource',
-        '-link', 'https://docs.oracle.com/en/java/javase/11/docs/api/',
+        '-link', 'https://docs.oracle.com/en/java/javase/21/docs/api/',
         '-link', 'https://mnlipp.github.io/jdrupes-httpcodec/javadoc/',
         '-link', 'https://jakarta.ee/specifications/mail/2.1/apidocs/',
         '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
@@ -78,7 +85,7 @@ task apidocs(type: JavaExec) {
         '-bottom', rootProject.file("misc/javadoc.bottom.txt").text,
         '--allow-script-in-comments',
         '-Xdoclint:-html',
-        '--main-stylesheet', "${rootProject.rootDir}/misc/stylesheet.css",
+        '--add-stylesheet', "${rootProject.rootDir}/misc/javadoc-overwrites.css",
         '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED',
         '-quiet'
         ]
